# game-monetization-platform

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
docs/: CAREER.md  SETUP.md  WORKFLOW.md  glossary.md  index.html
docs/adr/: 0001-ai-workflow-framework.md  0002-memory-architecture.md  0003-documentation-authority-precedence.md  0004-confidentiality-and-pii-handling.md  0005-data-quality-tool.md  0006-bi-tool.md  0007-product-analytics-platform.md  0008-orchestration-and-transformation.md  0009-cloud-warehouse.md  0010-documentation-methodology.md  0011-bigquery-service-account-permission-scope.md  0012-dbt-project-structure.md  0013-data-acquisition.md  README.md
docs/analyses/: 01-retention-curve-and-d7-improvements.md  02-revenue-concentration-and-live-ops-priorities.md  03-starter-pack-price-test-design.md  README.md
docs/dbt-docs/: index.html
monetization_orchestration/: .gitignore  README.md  pyproject.toml
monetization_orchestration/.dg/: telemetry.yaml
monetization_orchestration/src/monetization_orchestration/: definitions.py
monetization_orchestration/src/monetization_orchestration/defs/: soda_quality.py
monetization_orchestration/src/monetization_orchestration/defs/monetization_warehouse/: defs.yaml
monetization_warehouse/: dbt_project.yml
monetization_warehouse/models/marts/finance/: _finance__models.yml  fct_revenue_daily.sql
monetization_warehouse/models/marts/product/: _product__models.yml  dim_players.sql  fct_retention_cohorts.sql
monetization_warehouse/models/staging/floodit/: _floodit__sources.yml  stg_floodit__events.sql
monetization_warehouse/models/staging/synthetic_ads/: _synthetic_ads__sources.yml  stg_synthetic_ads__events.sql
monetization_warehouse/models/staging/synthetic_iap/: _synthetic_iap__sources.yml  stg_synthetic_iap__events.sql
scripts/data/: generate_synthetic_ad_events.py  generate_synthetic_iap_events.py  push_events_to_amplitude.py
scripts/gcp/: setup-bigquery.sh
scripts/study/: README.md  app.py  setup_duckdb.py
scripts/study/content/: case_studies.yaml  flashcards.yaml  sql_drills.yaml  star_prompts.yaml  walkthrough.yaml
scripts/study/modes/: __init__.py  case_studies.py  flashcards.py  sql_drills.py  star_behavioral.py  walkthrough.py
soda/: checks.yml  configuration.yml
