[project]
name = "game-monetization-platform"
version = "0.1.0"
description = "AI-assisted game monetization data platform — BigQuery warehouse, dbt transformations, Dagster orchestration, Soda data quality."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Warehouse + transformations
    "dbt-bigquery>=1.11",
    "google-cloud-bigquery-storage>=2.30",  # faster reads for Soda / Dagster / notebooks; eliminates the BigQuery client warning

    # Data quality (per ADR-0005 — Soda layer)
    "soda-core-bigquery>=3.5",

    # Observability (Sentry — Dagster process error reporting)
    "sentry-sdk>=2.0",

    # Env file loading — resolves .env upward from any cwd so Dagster running
    # from monetization_orchestration/ still sees env vars from the repo root.
    "python-dotenv>=1.0",

    # Synthetic ad-revenue generator (Step 5.2 / scripts/data/) — Parquet output
    # plus direct BigQuery client for reading Flood-It session data. Already
    # transitively available, declared explicitly so the script doesn't depend
    # on transitive resolution holding.
    "pyarrow>=15.0",
    "google-cloud-bigquery>=3.20",

    # Interview-prep study tool (scripts/study/) — Streamlit UI plus DuckDB
    # for running SQL drills offline against a local Parquet snapshot of
    # the BigQuery marts. Both runtime requirements; no transitive coverage.
    "streamlit>=1.34",
    "duckdb>=0.10",
    "pyyaml>=6.0",

    # Orchestration project — installed editable so dagster dev can import
    # the package; its own dependencies (dagster, dagster-dbt, dagster-gcp,
    # dagster-gcp-pandas, dagster-webserver, dagster-dg-cli) are pulled in
    # transitively from monetization_orchestration/pyproject.toml.
    "monetization-orchestration",
]

[tool.uv.sources]
monetization-orchestration = { path = "monetization_orchestration", editable = true }
