[project]
name = "monetization_orchestration"
requires-python = ">=3.10,<3.15"
version = "0.1.0"
dependencies = [
    "dagster==1.13.3",
    "dagster-dbt",
    "dagster-gcp",
    "dagster-gcp-pandas",
    # webserver + dg-cli are runtime deps for `dagster dev` and `dg check defs`,
    # not dev-only — promoted from create-dagster's default dev group so a fresh
    # `uv sync` brings them in.
    "dagster-webserver",
    "dagster-dg-cli",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "monetization_orchestration"
registry_modules = [
    "monetization_orchestration.components.*",
]


